# FWDE

./: .gitignore  BUILD_INSTALLER.md  FWDE.ahk  FWDE_Config.json  FWDE_DAW_Automation.ahk  FWDE_Debug.log.old  FWDE_MIDI_OSC.ahk  FWDE_PerformanceScaling.ahk  FWDE_PluginDependencies.ahk  FWDElastweek.ahk  FWDEmangled.ahk  Gdip.ahk  License.rtf  PERF_TRAIL_RECONSTRUCTION_GUIDE.md  README.MD  README.md  README.rtf  ToDo_FWDE.md  installer.iss  update_installer_version.bat
.github/: copilot-instructions.md
fwde-linux/: Cargo.toml  FWDE_AHK_TRANSLITERATION.md  README.md  rust-toolchain.toml
fwde-linux/crates/fwde-backend/: Cargo.toml
fwde-linux/crates/fwde-backend/src/: lib.rs  replay.rs  x11.rs
fwde-linux/crates/fwde-core/: Cargo.toml
fwde-linux/crates/fwde-core/src/: engine.rs  geometry.rs  legacy_config.rs  legacy_debug.rs  legacy_engine.rs  legacy_notes.md  legacy_params.rs  legacy_rules.rs  legacy_runtime.rs  legacy_support.rs  legacy_transliteration_map.md  legacy_types.rs  legacy_ui.rs  lib.rs  model.rs
fwde-linux/crates/fwde-daemon/: Cargo.toml
fwde-linux/crates/fwde-daemon/src/: app.rs  main.rs
fwde-linux/examples/: sample-config.json  sample-snapshot.json
fwde-linux/scripts/: README.md  bootstrap-debian.sh  build.sh  clean.sh  collect-latest-run.bat  collect-latest-run.ps1  collect-latest-run.sh  common.sh  first-run.sh  install-user-service.sh  run-daemon.sh  run-replay.sh
fwde-linux/scripts/_deprecated/: first-run.bash
fwde-linux/scripts/debug outputs/: dba260630.txt
memory-bank/: activeContext.md  decisionLog.md  progress.md  (+1 more)
