[workspace]
members = [
    "crates/fwde-core",
    "crates/fwde-backend",
    "crates/fwde-daemon",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["FWDE contributors"]
repository = "https://github.com/Flalaski/FWDE"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
